--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,13 +16,20 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      - name: Set IMAGE_TAG from git tag
+        run: |
+          # github.ref is like refs/tags/v2.14.1.3
+          IMAGE_TAG=${GITHUB_REF#refs/tags/}
+          echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
+          echo "Using IMAGE_TAG=$IMAGE_TAG"
+
       - name: Build and Push Docker Image
         env:
           AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: ${{ secrets.AWS_REGION }}
-          IMAGE_TAG: 4.6.4.3
+          IMAGE_TAG: $IMAGE_TAG
           ECR_REPOSITORY: mdaca/jupyter/jupyter-http-proxy
         run: |
           # Set ENV for AW Cred
@@ -65,7 +72,7 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: ${{ secrets.AWS_REGION }}
-          IMAGE_TAG: 4.6.4.3
+          IMAGE_TAG: $IMAGE_TAG
           ECR_REPOSITORY: mdaca/jupyter/jupyter-http-proxy
         run: |
           # Set ENV for AW Cred
